--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Odin-Recipes</h1>
-    <a href="./recipes/paneer.html"> Buttor paneer</a>
+    <a href="./recipes/paneer.html"> Butter paneer</a>
 
 </body>
 </html>
